codegen/ui_tests/rhai_mod_junk_arg.stderr
error: expecting identifier
  --> ui_tests/rhai_mod_junk_arg.rs:11:12
   |
11 | #[rhai_mod("wheeeee")]
   |            ^^^^^^^^^
